[workspace]
members = [
    "mai-sdk-core",
    "mai-sdk-plugins",
    "mai-sdk-runtime",
    "mai-sdk-python",
]
exclude = []
resolver = "2"

[workspace.package]
license = "BSD-3-Clause"
repository = "https://github.com/moderately-ai/mai-sdk"
keywords = ["machine-learning", "ai", "sdk"]

[workspace.dependencies]
anyhow = { version = "1.0" }
async-channel = "2.3"
nanoid = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"
tokio = { version = "1.37", features = ["macros"] }
bincode = { version = "1.3" }
