[package]
name = "mai-sdk-core"
version = "0.1.0"
edition = "2021"
description = "MAI SDK Core"
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
# common dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
async-channel = { workspace = true }
slog = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }

# core specific dependencies
libp2p = { version = "0.53", features = [
    # "async-std",
    "autonat",
    # "cbor",
    # "dcutr",
    "dns",
    "ecdsa",
    "ed25519",
    "floodsub",
    "gossipsub",
    "identify",
    # "json",
    "kad",
    "macros",
    "mdns",
    "memory-connection-limits",
    "metrics",
    "noise",
    "ping",
    # "plaintext",
    "pnet",
    "quic",
    "relay",
    # "rendezvous",
    "request-response",
    "rsa",
    "secp256k1",
    "serde",
    "tcp",
    "tls",
    "tokio",
    # "uds",
    # "wasm-bindgen",
    # "websocket-websys",
    "websocket",
    # "webtransport-websys",
    "yamux",
    # "upnp",
] }
either = "^1.12"
base64 = "^0.22"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
