[package]
name = "mai-sdk-node"
version = "0.1.0"
edition = "2021"
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
# internal dependencies
mai-sdk-core = { path = "../mai-sdk-core" }
mai-sdk-plugins = { path = "../mai-sdk-plugins" }
mai-sdk-runtime = { path = "../mai-sdk-runtime" }

# common dependencies
slog = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-channel = { workspace = true }

# node dependneices
clap = { version = "4.5.4", features = ["derive", "env"] }
slog-async = "2.8.0"
slog-term = "2.9.1"
signal-hook = "0.3.17"

[features]
# platform specific features
windows = []
linux = []
macos = []

# hardware specific features
cuda = ["mai-sdk-plugins/cuda"]
metal = ["mai-sdk-plugins/metal"]
