[package]
name = "mai-sdk-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mai_sdk_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
mai-sdk-runtime = { path = "../mai-sdk-runtime" }
mai-sdk-core = { path = "../mai-sdk-core" }
slog = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
