[package]
name = "mai-sdk-python"
version = "0.1.0"
edition = "2021"
license.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mai_sdk_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
mai-sdk-runtime = { path = "../mai-sdk-runtime", version = "0.1.0" }
mai-sdk-core = { path = "../mai-sdk-core", version = "0.1.0" }
slog = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
