[package]
name = "mai-sdk-runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
# internal dependencies
mai-sdk-core = { path = "../mai-sdk-core", version = "0.1.0" }
mai-sdk-plugins = { path = "../mai-sdk-plugins", version = "0.1.0" }

# common dependencies
anyhow = { workspace = true }
async-channel = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }

# runtime specific dependencies

[features]
default = []
metal = ["mai-sdk-core/metal"]
cuda = ["mai-sdk-core/cuda"]
